--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 fastapi==0.115.12
-fastapi_cache==0.1.0
+fastapi-cache2==0.2.2
 httpx==0.28.1
-networkx==3.4.2
-numpy==2.2.5
+networkx==3.1
+numpy==1.26.4
 passlib==1.7.4
-pydantic==2.11.4
-PyJWT==2.10.1
+pydantic==2.11.1
 PyJWT==2.10.1
 python-dotenv==1.1.0
 redis==5.2.1
 SQLAlchemy==2.0.40
+uvicorn==0.34.0
+alembic==1.15.2
+email-validator==2.1.1
